--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@ a:focus {
 
 /* Services Wrap */
 #service {
-	margin-top: 100px;
+	padding-top: 100px;
 	margin-bottom: 80px;
 }
 
@@ -289,7 +289,7 @@ a:focus {
 /* Testimonials Wrap */
 #twrap {
 	background: url(../img/t-back.jpg) no-repeat center top;
-	margin-top: 0px;
+	margin-top: 0;
 	padding-top:60px;
 	text-align:center;
 	background-attachment: relative;
